--- a/event_submit.html
+++ b/event_submit.html
@@ -145,8 +145,14 @@ Other Hackers
  
 </ul> 
 </form> 
- 
-</div><!--container--> 
+</div><!--container-->
+<img id="bottom" src="/static/bottom.png" alt="" />
+
+<a class="powertiny" href="http://wufoo.com?t=h2j6h2" title="Powered by Wufoo"
+style="display:block !important;visibility:visible !important;text-indent:0 !important;position:relative !important;height:auto !important;width:95px !important;overflow:visible !important;text-decoration:none;cursor:pointer !important;margin:0 auto !important">
+<span style="background:url(/static/powerlogo.png) no-repeat center 7px;margin:0 auto;display:inline-block !important;visibility:visible !important;text-indent:-9000px !important;position:static !important;overflow: auto !important;width:62px !important;height:30px !important">Wufoo</span>
+<b style="display:block !important;visibility:visible !important;text-indent:0 !important;position:static !important;height:auto !important;width:auto !important;overflow: auto !important;font-weight:normal;font-size:9px;color:#777;padding:0 0 0 3px;">Powered</b>
+</a>
 
 <script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
 <div id="fb-root"></div>
