--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@ h1 {
   text-indent: 0;
   color: white;
 }
+.wufoo li {
+  width: 100%;
+}
+img {
+  height: 12px;
+}
   </style>
 </head> 
 <body>
@@ -27,7 +33,7 @@ h1 {
 <ul>
 {% for event in events %}
   <li>
-    <a href="/{{ event.eid }}">{{ event.name }}</a> - <a href="/{{ event.eid }}/submit">Submit Hack</a>
+    <a href="/{{ event.eid }}">{{ event.name }}</a> <a href="/{{ event.eid }}/event"><img src="http://www.facebook.com/favicon.ico" /></a> <a href="/{{ event.eid }}/submit">Submit Hack</a>
   </li>
 {% endfor %}
 </ul>
