brand with Camp Hackathon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
   <title> 
-  Facebook University Hackathon
+  Facebook Camp Hackathon
   </title> 
 
   <link rel="stylesheet" href="/static/dynamic.12380.css" type="text/css" /> 
@@ -26,7 +26,7 @@ img {
 <form class="wufoo">
 
 <div class="info">
-  <h2>Facebook University Hackathon</h2>
+  <h2><a href="http://www.facebook.com/camphackathon">Facebook Camp Hackathon</a></h2>
   <div>Events</div>
 </div>
 
