--- a/event_submit.html
+++ b/event_submit.html
@@ -114,14 +114,14 @@ Screenshot URL
 <div> 
 <input id="screenshot_url" name="screenshot_url" type="text" class="field text large" value="http://" maxlength="255" tabindex="6" onkeyup="handleInput(this);" onchange="handleInput(this);" /> 
 </div> 
-<p class="instruct" id="instruct8"><small>A picture is worth a thousand words. You can upload your screenshot to github and post the raw url</small></p> 
+<p class="instruct" id="instruct8"><small>A picture is worth a thousand words. You can upload your screenshot to <a href="http://tinypic.com/">tinypic</a> and post the raw url.</small></p> 
 </li> 
 
  
 <li id="fo1li9" class="      "> 
 <label class="desc" id="title9" for="other_hackers"> 
 Other Hackers
-</label> 
+</label>
 <div> 
 <select id="other_hackers" name="other_hackers" class="field large" tabindex="7" multiple>
 {% for friend in friends %}
