--- a/event_submit.html
+++ b/event_submit.html
@@ -18,6 +18,15 @@ Hack Submission
 #login {
   margin: 10px 1%;
 }
+#error { 
+  background-color: #FFEBE8;
+  border: #DD3C10 1px solid;
+  padding: 10px;
+  text-align: center;
+  {% if isAttending %}
+  display: none;
+  {% endif %}
+}
 </style>
  
 <!-- JavaScript --> 
@@ -35,6 +44,10 @@ Hack Submission
 
 <div id="login">
   <fb:login-button show-faces="true" width="600"></fb:login-button> 
+</div>
+
+<div id="error">
+  You aren't "Attending" the <a href="/{{ eid }}/event">event</a>. Go do that, then reload this page.
 </div>
 
 <ul id="hack_form"> 
@@ -161,17 +174,17 @@ window.fbAsyncInit = function() {
       if (jQuery('#other_hackers').children().length == 0) {
         document.location.reload();
       } else {
+        {% if isAttending %}
         jQuery('#hack_form').show();
+        {% endif %}
       }
     }
   });
-  FB.init({appId: '136348336398305', status: true, cookie: true,
-           xfbml: true});
+  FB.init({appId: '136348336398305', status: true, cookie: true, xfbml: true});
 };
 (function() {
   var e = document.createElement('script'); e.async = true;
   e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
-  // e.src = 'http://www.ptarjan.dev229.facebook.com/assets.php/en_US/all.js';
   document.getElementById('fb-root').appendChild(e);
 }());
 </script>
@@ -224,35 +237,60 @@ $('form').submit(function () {
     alert('A screenshot is worth a thousand words.');
     return false;
   }
+  function is_valid_url(url) {
+    return url.match(/^(ht|f)tps?:\/\/[a-z0-9-\.]+\.[a-z]{2,4}\/?([^\s<>\#%"\,\{\}\\|\\\^\[\]`]+)?$/) !== null;
+  }
+  if (!is_valid_url($('#hack_url').val())) {
+    alert('Your hack URL doesn\'t look like a valid URL.');
+    return false;
+  }
+  if (!is_valid_url($('#screenshot_url').val())) {
+    alert('Your screenshot URL doesn\'t look like a valid URL.');
+    return false;
+  }
 
-  var data = {
-    method: 'stream.publish',
-    message: 'Hackathon Submission: '+$('#name').val()+names,
-    attachment: {
-      name: $('#name').val(),
-      description: $('#description').val(),
-      href: $('#hack_url').val(),
-      media: [
-        { type: 'image', src: $('#screenshot_url').val(), href: $('#screenshot_url').val() }
-      ],
-    },
-    target_id: $('#eid').val(),
-    user_message: {value: 'Submit your hack.'},
-  };
-  if ($('#github_url').val() && $('#github_url').val() != 'http://github.com/.../...') {
-    data['action_links'] = [
-      { text: 'View Code', href: $('#github_url').val() },
-    ];
+  var img = document.createElement('img');
+
+  img.onload = function() {
+    var data = {
+      method: 'stream.publish',
+      message: 'Hackathon Submission: '+$('#name').val()+names,
+      attachment: {
+        name: $('#name').val(),
+        description: $('#description').val(),
+        href: $('#hack_url').val(),
+        media: [
+          { type: 'image', src: $('#screenshot_url').val(), href: $('#screenshot_url').val() }
+        ],
+      },
+      target_id: $('#eid').val(),
+      user_message: {value: 'Submit your hack.'},
+    };
+    if ($('#github_url').val() && $('#github_url').val() != 'http://github.com/.../...') {
+      data['action_links'] = [
+        { text: 'View Code', href: $('#github_url').val() },
+      ];
+    }
+    
+    FB.ui(data, function(response) {
+      if (response && response.post_id) {
+        alert('Submission was published. Go get everyone to like it to win the Community Choice prize.');
+        window.location = '/{{ eid }}';
+      } else {
+        alert('Failed. Was everything filled out (and were all the URLs valid)?');
+      }
+    });
   }
   
-  FB.ui(data, function(response) {
-    if (response && response.post_id) {
-      alert('Submission was published. Go get everyone to like it to win the Community Choice prize.');
-      window.location = '/{{ eid }}';
-    } else {
-      alert('Failed. Was everything filled out (and were all the URLs valid)?');
+  img.onerror = function() {
+    var msg = 'Try putting it in your web browser and make sure it loads.';
+    if ($('#screenshot_url').val().search('localhost') !== -1) {
+      msg = 'You can\'t use localhost. Please upload to tinypic.com or something similar.';
     }
-  });
+    alert('Your image URL isn\'t valid. '+msg);
+  }
+  img.src = $('#screenshot_url').val();
+  $(document).append(img);
   return false;
 });
 
