comment out body for app tab

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ form li span {
 }
   </style>
 </head> 
-<body>
+<!-- commented out for app tabs
+<body> 
+-->
 
 <div id="container"> 
 <form class="wufoo">
