move to relative links for app page

--- a/event_submit.html
+++ b/event_submit.html
@@ -45,7 +45,7 @@ Hack Submission
 </div>
 
 <div id="error">
-  You aren't "Attending" the <a href="/{{ eid }}/event">event</a>. Go do that, then reload this page.
+  You aren't "Attending" the <a href="../event">event</a>. Go do that, then reload this page.
 </div>
 
 <ul id="hack_form"> 
@@ -54,7 +54,7 @@ Hack Submission
 <li id="fo1li12" class="      "> 
 Hackathon Event
 <div> 
-  <a href="http://facebook.com/event.php?eid={{ eid }}">{{ event.name }}</a>
+  <a href="../event">{{ event.name }}</a>
   <input type="hidden" name="eid" id="eid" value="{{ eid }}" />
 </div> 
 </li> 
