--- a/event.html
+++ b/event.html
@@ -23,7 +23,7 @@ td {
 
 <div class="info">
   <h2><a href="http://www.facebook.com/camphackathon">Facebook Camp Hackathon</a></h2>
-  <div>Hacks for <a href="/{{ eid }}/event">{{ event.name }}</a></div>
+  <div>Hacks for <a href="../{{ eid }}/event">{{ event.name }}</a></div>
 </div>
 
 <table>
