namespaces are good

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ form li span {
     {{ event.start_time|date:"M j Y" }} 
   </span>
   <a href="{{ event.id }}">{{ event.name }}</a> 
-  <a href="{{ event.id }}/event"><img src="http://fb-hackathon.appspot.com/favicon.png" /></a> 
+  <a href="{{ event.id }}/event"><img src="http://fb-hackathon.appspot.com/images/favicon.png" /></a> 
   <span class="count">
     {{ event.count }} 
   </span>
