deal with pagination (after our record attendance) and empty fields

--- a/event_submit.html
+++ b/event_submit.html
@@ -45,7 +45,7 @@ Hack Submission
 </div>
 
 <div id="error">
-  You aren't "Attending" the <a href="../event">event</a>. Go do that, then reload this page.
+  You aren't "Attending" the <a href="event">event</a>. Go do that, then reload this page.
 </div>
 
 <ul id="hack_form"> 
