add some og markup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="/static/dynamic.12380.css" type="text/css" /> 
   <link rel="stylesheet" href="/static/power.12380.css" type="text/css" /> 
+  <meta property="fb:admins" content="218471" />
   <style>
 h1 {
   text-indent: 0;
