link to submit page

--- a/event.html
+++ b/event.html
@@ -27,7 +27,11 @@ th.likes {
 
 <div class="info">
   <h2><a href="http://www.facebook.com/camphackathon">Facebook Camp Hackathon</a></h2>
-  <div>Hacks for <a href="../{{ eid }}/event">{{ event.name }}</a></div>
+  <div>
+    Hacks for <a href="/{{ eid }}/event">{{ event.name }}</a>
+    -
+    <a href="/{{ eid }}/submit">Submit Your Hack</a>
+  </div>
 </div>
 
 <table>
