we lost the / along the way

--- a/event_submit.html
+++ b/event_submit.html
@@ -54,7 +54,7 @@ Hack Submission
 <li id="fo1li12" class="      "> 
 Hackathon Event
 <div> 
-  <a href="../event">{{ event.name }}</a>
+  <a href="event">{{ event.name }}</a>
   <input type="hidden" name="eid" id="eid" value="{{ eid }}" />
 </div> 
 </li> 
