--- a/event.html
+++ b/event.html
@@ -56,7 +56,7 @@ th.likes {
     </td>
     <td>
       <a href="{{ hack.screenshot_raw }}">
-        <img src="{{ hack.screenshot }}" />
+        <img height="64" src="{{ hack.screenshot }}" />
       </a>
     </td>
     <td>
