deal with jquery conflicts

--- a/event_submit.html
+++ b/event_submit.html
@@ -30,6 +30,12 @@ Hack Submission
 div#jfmfs-friend-selector {
   width: 100%;
 }
+/* overwrite the wufoo thing */
+span#jfmfs-selected-count {
+  width: auto;
+  display: inline;
+  float: none;
+}
 </style>
  
 <!-- JavaScript --> 
