--- a/event_submit.html
+++ b/event_submit.html
@@ -136,7 +136,7 @@ Screenshot URL
 <div> 
 <input id="screenshot_url" name="screenshot_url" type="text" class="field text large" value="http://" maxlength="255" tabindex="6" onkeyup="handleInput(this);" onchange="handleInput(this);" /> 
 </div> 
-<p class="instruct" id="instruct8"><small>A picture is worth a thousand words. You can upload your screenshot to <a href="http://tinypic.com/">tinypic</a> and post the raw url.</small></p> 
+<p class="instruct" id="instruct8"><small>A picture is worth a thousand words. You can upload your screenshot to <a target="_blank" href="http://tinypic.com/">tinypic</a> and post the raw url.</small></p> 
 </li> 
 
  
